--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
+    
 </head>
 <body>
-    
+    <div>
+        <h3>my frist web site</h3>
+        <p>this is tasn. fristtime create a site</p>
+    </div>
 </body>
 </html>
