added the second and thired blog

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <body>
     <div>
         <h3>my frist web site</h3>
-        <p>this is tasn. fristtime create a site</p>
+        <p>this is tasin. fristtime create a site</p>
+    </div>
+    <div>
+        <h3>my second web site</h3>
+        <p>this is tasin. fristtime create a site.i am done</p>
+    </div>
+    <div>
+        <h3>my thired web site</h3>
+        <p>this is tasin. fristtime create a site.i am tired</p>
     </div>
 </body>
 </html>
