--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
         <h3>my thired web site</h3>
         <p>this is tasin. fristtime create a site.i am tired</p>
     </div>
+    <div><h3>how to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add ameaningful commit message"</li>
+        <li>git push</li>
+    </ul></div>
 </body>
 </html>
