--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
         <li>git commit -m"add ameaningful commit message"</li>
         <li>git push</li>
     </ul></div>
+    <div><h3>kim kim khai everyday one single dim</h3>
+    <img src="images/Mdjkcjd.jpg" alt=""></div>
 </body>
 </html>
